feat: inizializzazione struttura spotify

--- a/index.html
+++ b/index.html
@@ -15,32 +15,105 @@
 <body>
     <section class="wrapper">
 
-        <!-- big-section -->
+        <!-- BIG-SECTION -->
 
         <div class="big-section">
 
-            <!-- nav-list -->
-             
+            <!-- "nav-list" -->
+
             <div class="nav-list">
+                <!-- spotify-icon -->
+                <div class="spotify-icon"></div>
+                <!-- icon-list -->
+                <ul class="icon-list">
+                    <li class="home"></li>
+                    <li class="cerca"></li>
+                    <li class="libreria"></li>
+                </ul>
+                <!-- playlist -->
+                <ul class="playlist">
+                    <li class="title-playlist"></li>
+                    <li class="crea-playlist"></li>
+                    <li class="nome-playlist"></li>
+                    <li class="nome-playlist"></li>
+                    <li class="nome-playlist"></li>
+                    <li class="nome-playlist"></li>
+                    <li class="nome-playlist"></li>
+                    <li class="nome-playlist"></li>
+                </ul>
+                <!-- installa -->
+                <div class="installa"></div>
+
+                <!-- hr aggiungere -->
+
+                <!-- profilo -->
+                <div class="profilo"></div>
 
             </div>
-            <!-- home-section -->
+            <!-- "home-section" -->
 
             <div class="home-section">
 
                 <!-- top-home -->
 
-                <div class="top-home"></div>
+                <div class="top-home">
+
+                    <!-- upgrade-top -->
+                    <div class="upgrade-top"></div>
+                </div>
 
                 <!-- home-center -->
 
-                <div class="home-center"></div>
+                <div class="home-center">
+                    <!-- nav-center -->
+                    <ul class="nav-center">
+                        <li class="item-center"></li>
+                        <li class="item-center"></li>
+                        <li class="item-center"></li>
+                        <li class="item-center"></li>
+                        <li class="item-center"></li>
+                        <li class="item-center"></li>
+                    </ul>
+                    <!-- recently-center -->
+                    <h2 class="recently-center titolo"></h2>
+                    <!-- music-list -->
+                    <ul class="music-list">
+                        <li class="music-card">
+                            <img src="" alt="">
+                            <h4 class="title-music titolo"></h4>
+                            <p class="subtitle music"></p>
+                        </li>
+                        <li class="music-card"></li>
+                        <li class="music-card"></li>
+                        <li class="music-card"></li>
+                        <li class="music-card"></li>
+                        <li class="music-card"></li>
+                    </ul>
+                    <h2 class="creato-center titolo"></h2>
+                    <p class="subtitle creato"></p>
+                    <ul class="music-list">
+                        <li class="music-card"></li>
+                        <li class="music-card"></li>
+
+                    </ul>
+                    <h2 class="artisti-center titolo"></h2>
+                    <p class="subtitle artisti"></p>
+                    <ul class="music-list">
+                        <li class="music-card artisti-card"></li>
+                        <li class="music-card artisti-card"></li>
+                    </ul>
+
+                </div>
 
             </div>
 
         </div>
-        <!-- section-interattiva -->
-        <div class="section-interattiva"></div>
+        <!-- SECTION-INTERATTIVA -->
+        <div class="section-interattiva">
+
+
+            
+        </div>
 
 
 
