feat: finalizzazione struttura base

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
             <div class="nav-list">
                 <!-- spotify-icon -->
-                <div class="spotify-icon"></div>
+                <div class="spotify-icon">
+                    
+                </div>
                 <!-- icon-list -->
                 <ul class="icon-list">
                     <li class="home"></li>
@@ -89,6 +91,7 @@
                         <li class="music-card"></li>
                         <li class="music-card"></li>
                     </ul>
+                    <!-- creato per john doe -->
                     <h2 class="creato-center titolo"></h2>
                     <p class="subtitle creato"></p>
                     <ul class="music-list">
@@ -96,6 +99,7 @@
                         <li class="music-card"></li>
 
                     </ul>
+                    <!-- artisti più popolari -->
                     <h2 class="artisti-center titolo"></h2>
                     <p class="subtitle artisti"></p>
                     <ul class="music-list">
@@ -111,8 +115,11 @@
         <!-- SECTION-INTERATTIVA -->
         <div class="section-interattiva">
 
+            <div class="now-listen"></div>
+            <div class="action-now"></div>
+            <div class="audio-player"></div>
 
-            
+
         </div>
 
 
