feat: finalizzazione big-section

--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
                         </li>
                         <li class="libreria">
                             <img src="./img/libreria.svg" alt="">
-                           <div class="text-center hover"> La tua libreria</div>
+                            <div class="text-center hover"> La tua libreria</div>
                         </li>
                     </ul>
                     <!-- playlist -->
                     <ul class="playlist">
                         <li class="title-playlist white pb">PLAYLIST</li>
                         <li class="crea-playlist grey flex pb hover">
-                            <i class="fa-solid fa-square-plus"></i> <p>Crea Playlist</p>
+                            <i class="fa-solid fa-square-plus"></i>
+                            <p>Crea Playlist</p>
                         </li>
                         <li class="nome-playlist grey pb hover">Nome Playlist</li>
                         <li class="nome-playlist grey pb hover">Nome Playlist</li>
@@ -96,44 +97,65 @@
                 <div class="home-center">
                     <!-- nav-center -->
                     <ul class="nav-center grey">
-                        <li class="item-center">IN EVIDENZA</li>
-                        <li class="item-center">PODCAST</li>
-                        <li class="item-center">CLASSIFICHE </li>
-                        <li class="item-center">GENERI E MOOD</li>
-                        <li class="item-center">NUOVE USITE</li>
-                        <li class="item-center">SCOPRI</li>
+                        <li class="item-center hover">IN EVIDENZA</li>
+                        <li class="item-center hover">PODCAST</li>
+                        <li class="item-center hover">CLASSIFICHE </li>
+                        <li class="item-center hover">GENERI E MOOD</li>
+                        <li class="item-center hover">NUOVE USITE</li>
+                        <li class="item-center hover">SCOPRI</li>
                     </ul>
+                    <hr class="green">
                     <!-- recently-center -->
-                    <h2 class="recently-center titolo"></h2>
-                    <!-- music-list -->
-                    <div class="music-list">
-                        <div class="music-card">
-                            <img src="" alt="">
-                            <h4 class="title-music titolo"></h4>
-                            <p class="subtitle music"></p>
+                    <div class="container">
+                        <h2 class="recently-center titolo white">Recently played</h2>
+                        <!-- music-list -->
+                        <div class="music-list">
+                            <div class="music-card">
+                                <img src="./img/metal_lifting.jpg" alt="">
+                                <h4 class="title-music titolo white pt">Heavy Metal</h4>
+                                <p class="subtitle music grey pt10 ">Subtitle</p>
+                            </div>
+                            <div class="music-card"><img src="./img/stranger.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">Stranger Things, Vol.
+                                    1 (a Netflix Original Series Soundtrack)</h4>
+                                <p class="subtitle music grey pt10">Kyle Dixon & Micheal Stein</p></div>
+                            <div class="music-card"><img src="./img/aquietplace.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">A quiet place</h4>
+                                <p class="subtitle music grey pt10">Subtitle</p></div>
+                            <div class="music-card"><img src="./img/split.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">Split</h4>
+                                <p class="subtitle music grey pt10">Subtitle</p></div>
+                            <div class="music-card"><img src="./img/cure.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">A cure for wellness</h4>
+                                <p class="subtitle music grey pt10">Subtitle</p></div>
+                            <div class="music-card"><img src="./img/sinister.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">Sinister</h4>
+                                <p class="subtitle music grey pt10">Subtitle</p></div>
                         </div>
-                        <div class="music-card"></div>
-                        <div class="music-card"></div>
-                        <div class="music-card"></div>
-                        <div class="music-card"></div>
-                        <div class="music-card"></div>
-                    </div>
-                    <!-- creato per john doe -->
-                    <h2 class="creato-center titolo"></h2>
-                    <p class="subtitle creato"></p>
-                    <div class="music-list">
-                        <div class="music-card"></div>
-                        <div class="music-card"></div>
+                        <!-- creato per john doe -->
+                        <h2 class="creato-center titolo white pt"> Creato per John Doe</h2>
+                        <p class="subtitle creato grey pt10">Più ascolti, più accurati saranno i tuoi suggerimenti</p>
+                        <div class="music-list">
+                            <div class="music-card"><img src="./img/radar.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">Release Radar</h4></div>
+                            <div class="music-card"><img src="./img/mixdaily.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">Daily Mix 1</h4></div>
 
+                        </div>
+                        <!-- artisti più popolari -->
+                        <h2 class="artisti-center titolo white pt">Artisti più popolari</h2>
+                        <p class="subtitle artisti pt10 grey">Più ascolti, più accurati saranno i tuoi suggerimenti</p>
+                        <div class="music-list">
+                            <div class="music-card artisti-card">
+                                <img src="./img/radar.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">Lana del Rey</h4>
+                            </div>
+                            <div class="music-card artisti-card">
+                                <img src="./img/einaudi.jpeg" alt="">
+                                <h4 class="title-music titolo white pt">Ludovico Einaudi</h4>
+                            </div>
+                        </div>
                     </div>
-                    <!-- artisti più popolari -->
-                    <h2 class="artisti-center titolo"></h2>
-                    <p class="subtitle artisti"></p>
-                    <div class="music-list">
-                        <div class="music-card artisti-card"></div>
-                        <div class="music-card artisti-card"></div>
-                    </div>
-
                 </div>
 
             </div>
