feat: formattazione documento

--- a/index.html
+++ b/index.html
@@ -118,28 +118,35 @@
                             <div class="music-card"><img src="./img/stranger.jpeg" alt="">
                                 <h4 class="title-music titolo white pt">Stranger Things, Vol.
                                     1 (a Netflix Original Series Soundtrack)</h4>
-                                <p class="subtitle music grey pt10">Kyle Dixon & Micheal Stein</p></div>
+                                <p class="subtitle music grey pt10">Kyle Dixon & Micheal Stein</p>
+                            </div>
                             <div class="music-card"><img src="./img/aquietplace.jpeg" alt="">
                                 <h4 class="title-music titolo white pt">A quiet place</h4>
-                                <p class="subtitle music grey pt10">Subtitle</p></div>
+                                <p class="subtitle music grey pt10">Subtitle</p>
+                            </div>
                             <div class="music-card"><img src="./img/split.jpeg" alt="">
                                 <h4 class="title-music titolo white pt">Split</h4>
-                                <p class="subtitle music grey pt10">Subtitle</p></div>
+                                <p class="subtitle music grey pt10">Subtitle</p>
+                            </div>
                             <div class="music-card"><img src="./img/cure.jpeg" alt="">
                                 <h4 class="title-music titolo white pt">A cure for wellness</h4>
-                                <p class="subtitle music grey pt10">Subtitle</p></div>
+                                <p class="subtitle music grey pt10">Subtitle</p>
+                            </div>
                             <div class="music-card"><img src="./img/sinister.jpeg" alt="">
                                 <h4 class="title-music titolo white pt">Sinister</h4>
-                                <p class="subtitle music grey pt10">Subtitle</p></div>
+                                <p class="subtitle music grey pt10">Subtitle</p>
+                            </div>
                         </div>
                         <!-- creato per john doe -->
                         <h2 class="creato-center titolo white pt"> Creato per John Doe</h2>
                         <p class="subtitle creato grey pt10">Più ascolti, più accurati saranno i tuoi suggerimenti</p>
                         <div class="music-list">
                             <div class="music-card"><img src="./img/radar.jpeg" alt="">
-                                <h4 class="title-music titolo white pt">Release Radar</h4></div>
+                                <h4 class="title-music titolo white pt">Release Radar</h4>
+                            </div>
                             <div class="music-card"><img src="./img/mixdaily.jpeg" alt="">
-                                <h4 class="title-music titolo white pt">Daily Mix 1</h4></div>
+                                <h4 class="title-music titolo white pt">Daily Mix 1</h4>
+                            </div>
 
                         </div>
                         <!-- artisti più popolari -->
