feat: finalizzazione documento

--- a/index.html
+++ b/index.html
@@ -33,48 +33,74 @@
                         <img class="logo" src="./img/logo.svg" alt="">
                     </div>
                     <!-- icon-list -->
+
                     <ul class="icon-list">
+
                         <li class="home">
-                            <img src="./img/home.svg" alt="">
-                            <div class="text-center hover">Home</div>
+                            <a href=""> <img src="./img/home.svg" alt="">
+                                <div class="text-center hover">Home</div>
+                            </a>
                         </li>
+
                         <li class="cerca">
-                            <img src="./img/search.svg" alt="">
-                            <div class="text-center hover">Cerca</div>
+                            <a href="">
+                                <img src="./img/search.svg" alt="">
+                                <div class="text-center hover">Cerca</div>
+                            </a>
                         </li>
                         <li class="libreria">
-                            <img src="./img/libreria.svg" alt="">
-                            <div class="text-center hover"> La tua libreria</div>
+                            <a href="">
+                                <img src="./img/libreria.svg" alt="">
+                                <div class="text-center hover"> La tua libreria</div>
+                            </a>
                         </li>
                     </ul>
                     <!-- playlist -->
                     <ul class="playlist">
                         <li class="title-playlist white pb">PLAYLIST</li>
                         <li class="crea-playlist grey flex pb hover">
+
                             <i class="fa-solid fa-square-plus"></i>
                             <p>Crea Playlist</p>
+
                         </li>
-                        <li class="nome-playlist grey pb hover">Nome Playlist</li>
-                        <li class="nome-playlist grey pb hover">Nome Playlist</li>
-                        <li class="nome-playlist grey pb hover">Nome Playlist</li>
-                        <li class="nome-playlist grey pb hover">Nome Playlist</li>
-                        <li class="nome-playlist grey pb hover">Nome Playlist</li>
-                        <li class="nome-playlist grey pb hover">Nome Playlist</li>
+                        <li class="nome-playlist grey pb hover">
+                            <a href=""> Nome Playlist</a>
+                        </li>
+                        <li class="nome-playlist grey pb hover">
+                            <a href=""> Nome Playlist</a>
+                        </li>
+                        <li class="nome-playlist grey pb hover">
+                            <a href=""> Nome Playlist</a>
+                        </li>
+                        <li class="nome-playlist grey pb hover">
+                            <a href=""> Nome Playlist</a>
+                        </li>
+                        <li class="nome-playlist grey pb hover">
+                            <a href=""> Nome Playlist</a>
+                        </li>
+                        <li class="nome-playlist grey pb hover">
+                            <a href=""> Nome Playlist</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="nav-list-bottom">
                     <!-- installa -->
                     <div class="installa flex pb10">
-                        <img src="./img/download.svg" alt="">
-                        <div class="grey hover">Installa app</div>
+                        <a href="">
+                            <img src="./img/download.svg" alt="">
+                            <div class="grey hover none">Installa app</div>
+                        </a>
                     </div>
 
-                    <hr class="">
+                    <hr class="hr none">
 
                     <!-- profilo -->
                     <div class="profilo flex pb10 pt">
-                        <img class="grey " src="./img/profile.svg" alt="">
-                        <div class="white ">John Doe</div>
+                        <a class="profio-flex" href="">
+                            <img class="grey " src="./img/profile.svg" alt="">
+                            <div class="white none">John Doe</div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -97,42 +123,81 @@
                 <div class="home-center">
                     <!-- nav-center -->
                     <ul class="nav-center grey">
-                        <li class="item-center hover">IN EVIDENZA</li>
+                        <li class="item-center hover">IN EVIDENZA
+                            <div class="green"></div>
+                        </li>
                         <li class="item-center hover">PODCAST</li>
                         <li class="item-center hover">CLASSIFICHE </li>
                         <li class="item-center hover">GENERI E MOOD</li>
                         <li class="item-center hover">NUOVE USITE</li>
                         <li class="item-center hover">SCOPRI</li>
                     </ul>
-                    <hr class="green">
+
                     <!-- recently-center -->
                     <div class="container">
                         <h2 class="recently-center titolo white">Recently played</h2>
                         <!-- music-list -->
                         <div class="music-list">
                             <div class="music-card">
-                                <img src="./img/metal_lifting.jpg" alt="">
+                                <div class="img-overlay"> <img src="./img/metal_lifting.jpg" alt="">
+
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
                                 <h4 class="title-music titolo white pt">Heavy Metal</h4>
                                 <p class="subtitle music grey pt10 ">Subtitle</p>
                             </div>
-                            <div class="music-card"><img src="./img/stranger.jpeg" alt="">
+                            <div class="music-card">
+                                <div class="img-overlay"><img src="./img/stranger.jpeg" alt="">
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+
                                 <h4 class="title-music titolo white pt">Stranger Things, Vol.
                                     1 (a Netflix Original Series Soundtrack)</h4>
                                 <p class="subtitle music grey pt10">Kyle Dixon & Micheal Stein</p>
                             </div>
-                            <div class="music-card"><img src="./img/aquietplace.jpeg" alt="">
+                            <div class="music-card">
+                                <div class="img-overlay"><img src="./img/aquietplace.jpeg" alt="">
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+
                                 <h4 class="title-music titolo white pt">A quiet place</h4>
                                 <p class="subtitle music grey pt10">Subtitle</p>
                             </div>
-                            <div class="music-card"><img src="./img/split.jpeg" alt="">
+                            <div class="music-card">
+                                <div class="img-overlay"> <img src="./img/split.jpeg" alt="">
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+
                                 <h4 class="title-music titolo white pt">Split</h4>
                                 <p class="subtitle music grey pt10">Subtitle</p>
                             </div>
-                            <div class="music-card"><img src="./img/cure.jpeg" alt="">
+                            <div class="music-card">
+                                <div class="img-overlay">
+                                    <img src="./img/cure.jpeg" alt="">
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+
+
                                 <h4 class="title-music titolo white pt">A cure for wellness</h4>
                                 <p class="subtitle music grey pt10">Subtitle</p>
                             </div>
-                            <div class="music-card"><img src="./img/sinister.jpeg" alt="">
+                            <div class="music-card">
+                                <div class="img-overlay"> <img src="./img/sinister.jpeg" alt="">
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
+
                                 <h4 class="title-music titolo white pt">Sinister</h4>
                                 <p class="subtitle music grey pt10">Subtitle</p>
                             </div>
@@ -141,10 +206,20 @@
                         <h2 class="creato-center titolo white pt"> Creato per John Doe</h2>
                         <p class="subtitle creato grey pt10">Più ascolti, più accurati saranno i tuoi suggerimenti</p>
                         <div class="music-list">
-                            <div class="music-card"><img src="./img/radar.jpeg" alt="">
+                            <div class="music-card">
+                                <div class="img-overlay"><img src="./img/radar.jpeg" alt="">
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
                                 <h4 class="title-music titolo white pt">Release Radar</h4>
                             </div>
-                            <div class="music-card"><img src="./img/mixdaily.jpeg" alt="">
+                            <div class="music-card">
+                                <div class="img-overlay"><img src="./img/mixdaily.jpeg" alt="">
+                                    <div class="overlay">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
                                 <h4 class="title-music titolo white pt">Daily Mix 1</h4>
                             </div>
 
@@ -154,11 +229,19 @@
                         <p class="subtitle artisti pt10 grey">Più ascolti, più accurati saranno i tuoi suggerimenti</p>
                         <div class="music-list">
                             <div class="music-card artisti-card">
-                                <img src="./img/radar.jpeg" alt="">
+                                <div class="img-overlay"> <img src="./img/radar.jpeg" alt="">
+                                    <div class="overlay border-rad">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
                                 <h4 class="title-music titolo white pt">Lana del Rey</h4>
                             </div>
                             <div class="music-card artisti-card">
-                                <img src="./img/einaudi.jpeg" alt="">
+                                <div class="img-overlay"> <img src="./img/einaudi.jpeg" alt="">
+                                    <div class="overlay border-rad">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                </div>
                                 <h4 class="title-music titolo white pt">Ludovico Einaudi</h4>
                             </div>
                         </div>
@@ -171,9 +254,43 @@
         <!-- SECTION-INTERATTIVA -->
         <div class="section-interattiva">
 
-            <div class="now-listen"></div>
-            <div class="action-now"></div>
-            <div class="audio-player"></div>
+            <div class="now-listen">
+                <img src="./img/sinister.jpeg" alt="">
+                <p> <span class="white">Sinister</span> <br> <span class="grey fs">Brano nome</span></p>
+                <div class="now-item"><i class="fa-regular fa-heart grey hover"></i>
+                    <i class="fa-regular fa-folder grey hover"></i>
+                </div>
+            </div>
+            <div class="action-now">
+                <div class="action-item">
+                    <i class="fa-solid fa-shuffle white fl1"></i>
+                    <i class="fa-solid fa-backward-step white fl1"></i>
+                    <i class="fa-regular fa-circle-play white fl"></i>
+                    <i class="fa-solid fa-forward-step white fl1"></i>
+                    <i class="fa-solid fa-rotate-right white fl1"></i>
+
+                </div>
+                <div class="barre">
+                    <p class="white">0:25</p>
+                    <div class="barra">
+                        <div class="barra1">
+                            <div class="palla"></div>
+                        </div>
+                    </div>
+                    <p class="white">4:35</p>
+                </div>
+
+            </div>
+            <div class="audio-player">
+                <i class="fa-solid fa-list-ul white fs"></i>
+                <i class="fa-solid fa-desktop white fs"></i>
+                <i class="fa-solid fa-volume-high white fs"></i>
+                <div class="barra-audio">
+                    <div class="barra-audio1">
+                        <div class="palla"></div>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
